<resources>
    <string name="app_name">SofarMusic</string>

    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>

    <!--标题栏-->
    <string name="icon_music">&#xe641;</string>
    <string name="icon_manager">&#xe602;</string>
    <string name="icon_people">&#xe604;</string>
    <string name="icon_search">&#xe660;</string>
    <string name="icon_back">&#xe60a;</string>
    <string name="icon_xx">&#xe62a;</string>
    <string name="icon_toggle">&#xe729;</string>

    <!--皮肤界面-->
    <string name="icon_vline">&#xe688;</string>

    <!--自选颜色界面-->
    <string name="icon_color_square">&#xe673;</string>
    <string name="icon_color_back">&#xe600;</string>
    <string name="icon_color_select">&#xe608;</string>


    <!--左侧菜单栏-->
    <string name="icon_msg">&#xe607;</string>
    <string name="icon_shop">&#xe775;</string>
    <string name="icon_vip">&#xe61c;</string>
    <string name="icon_line_music">&#xe68d;</string>
    <string name="icon_listen">&#xe6e8;</string>
    <string name="icon_skin">&#xe629;</string>
    <string name="icon_night">&#xe61b;</string>
    <string name="icon_time">&#xe649;</string>
    <string name="icon_scan">&#xe878;</string>
    <string name="icon_clock">&#xe630;</string>
    <string name="icon_car">&#xe6bb;</string>

    <string name="icon_sun">&#xe74a;</string>
    <string name="icon_moon">&#xe648;</string>
    <string name="icon_setting">&#xe662;</string>
    <string name="icon_exit">&#xe60d;</string>

    <!--菜单-->
    <string name="icon_sort">&#xe643;</string>


    <!--歌手搜索相关-->
    <string name="icon_singer">&#xe601;</string>
    <string name="icon_forward">&#xe603;</string>

    <!--音乐播放器相关-->
    <string name="icon_three_line">&#xe6bf;</string>
    <string name="icon_next">&#xe718;</string>
    <string name="icon_play">&#xe605;</string>
    <string name="icon_stop">&#xe62d;</string>
    <string name="icon_voice">&#xe6d2;</string>

    <!--磁盘播放界面-->
    <string name="icon_like">&#xe678;</string>
    <string name="icon_download">&#xe627;</string>
    <string name="icon_comment">&#xe60b;</string>
    <string name="icon_three_dot">&#xe606;</string>
    <string name="icon_share">&#xe616;</string>
    <string name="icon_left">&#xe6e9;</string>
    <string name="icon_right">&#xe6e7;</string>
    <string name="icon_list_cycle">&#xe626;</string>
    <string name="icon_single_cycle">&#xe6f3;</string>
    <string name="icon_random_cycle">&#xe628;</string>


    <!--本地音乐管理相关-->
    <string name="icon_phone">&#xe613;</string>
    <string name="icon_file">&#xe65f;</string>
    <string name="icon_dustbin">&#xe60c;</string>
    <string name="icon_disk">&#xe609;</string>
    <string name="icon_local_down">&#xe661;</string>

    <!--demo图标-->
    <string name="icon_camera_change">&#xe609;</string>
</resources>
