<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:skin="http://schemas.android.com/android/skin"
  android:id="@+id/rl_main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/main_ui_background"
  skin:enable="true">

  <LinearLayout
    android:id="@+id/ll_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/head_title_bg_color"
    android:orientation="vertical"
    skin:enable="true">

    <com.sf.widget.status.StatusBarView
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="?attr/actionBarSize"
      app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


      <TextView
        android:id="@+id/music_tv"
        style="@style/TitleIconTheme"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:text="@string/icon_music" />


      <TextView
        android:id="@+id/manager_tv"
        style="@style/TitleIconTheme"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:text="@string/icon_manager" />

      <TextView
        android:id="@+id/people_tv"
        style="@style/TitleIconTheme"
        android:layout_gravity="center"
        android:text="@string/icon_people" />

      <TextView
        android:id="@+id/search_tv"
        style="@style/TitleIconTheme"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/icon_search"
        android:textSize="20sp" />


    </androidx.appcompat.widget.Toolbar>

  </LinearLayout>

  <androidx.viewpager.widget.ViewPager
    android:id="@+id/main_vp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/bottom_ll"
    android:layout_below="@+id/ll_title">

  </androidx.viewpager.widget.ViewPager>


  <include layout="@layout/layout_bottom_fill" />


</RelativeLayout>
