<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:skin="http://schemas.android.com/android/skin"
  android:id="@+id/music_rl"
  android:layout_width="match_parent"
  android:layout_height="60dp"
  android:background="?attr/selectableItemBackground"
  android:clickable="true">

  <com.sf.base.view.IconTextView
    android:id="@+id/file_tv"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_centerVertical="true"
    android:layout_marginLeft="10dp"
    android:gravity="center"
    android:text="@string/icon_file"
    android:textColor="@color/text_gray"
    android:textSize="25sp" />

  <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="50dp"
    android:layout_toRightOf="@+id/file_tv">

    <TextView
      android:id="@+id/file_name_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="十一月的萧邦"
      android:textColor="@color/main_text_color"
      android:textSize="16sp"
      skin:enable="true" />

    <TextView
      android:id="@+id/file_count_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/file_name_tv"
      android:text="2首"
      android:textColor="@color/text_gray"
      android:textSize="12sp" />

    <TextView
      android:id="@+id/file_path_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/file_name_tv"
      android:layout_marginLeft="5dp"
      android:layout_toRightOf="@+id/file_count_tv"
      android:text="周杰伦"
      android:textColor="@color/text_gray"
      android:textSize="12sp" />
  </RelativeLayout>


  <com.sf.base.view.IconTextView
    android:id="@+id/dot_tv"
    style="@style/TitleIconTheme"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:text="@string/icon_three_dot"
    android:textColor="@color/text_gray"
    android:textSize="20sp" />

  <com.sf.base.view.IconTextView
    android:id="@+id/voice_tv"
    style="@style/TitleIconTheme"
    android:layout_alignParentRight="true"
    android:layout_centerVertical="true"
    android:text="@string/icon_voice"
    android:textColor="@color/themeColor"
    android:textSize="20sp"
    android:visibility="gone"
    skin:enable="true" />

  <View
    android:layout_width="match_parent"
    android:layout_height="0.5dp"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:background="@color/half_light_gray" />

</RelativeLayout>


